# safedocs-yarn-public

./: .dockerignore  .gitignore  LICENSE  README.md  build.sh  run-analysis.sh  run_trace.py  test_trace.py
docker/: Dockerfile.memtrace  install_binja.sh  install_parser.sh
instrumentation/: CMakeLists.txt  Makefile  fn-filter-parser.c  fn-filter-parser.h  fn-wrap.c  fn-wrap.h  inputfd.c  inputfd.h  logging.c  logging.h  mem-trace.c  mem-trace.h  mmap.c  mmap.h  per-thread.h  prune.c  prune.h  recording-utils.c  recording-utils.h  syscall.c  syscall.h
parser-settings/: mupdf.json  opendds.json  poppler.json  xpdf.json
parsers/: libc-2.31.so.addrs.json
parsers/mupdf-1.16.1_build/: README
parsers/poppler0840_build/: README  libpoppler.so.94.addrs.json
parsers/xpdf-4.01.01_build/: README
schema/: parser-settings-schema.json
tracetools/: LICENSE  README.md  quicksect.patch  setup.py
tracetools/tools/: bn_filter.py  callstack_diff.py  count_calls.py  gen_bin_metadata.py  import_bndb.py  import_result_artifact.py  log_console.py  mutool_cache_obj_mallocs.py  mutool_read_cache_obj_num.py  poppler_jpeg.py  poppler_new_lexer_mallocs.py  print_callstack.py  print_log.py  pt_tracker.py  results_manager.py  view_parsetree.py
tracetools/tracetools/: __init__.py  analyze.py  bin_info.py  bin_info_common.py  bin_info_no_binja.py  binja_tags.py  call_stack.py  defn_manager.py  file_ops.py  global_config.py  heap.py  log_entries.py  memory_tree.py  mmap_info.py  parse_log.py  pt.py  results.py  results_data.py  yarn_args.py
tracetools/tracetools/signatures/: libc.py  (+16 more)
(+4 files in other folders)
