# SPDX-License-Identifier: MIT
cmake_minimum_required(VERSION 3.10)
project (Merry-dynamic)
set(Dynamo_root /opt/dynamorio)
set(Dynamo_bin ${Dynamo_root}/bin64)
set(DynamoRIO_DIR ${Dynamo_root}/cmake)
find_package(DynamoRIO)
set(DEBUG ON)
set(CXX_FLAGS "-Dpermissive")
set(name memcalltrace)
add_library(${name} SHARED recording-utils.c syscall.c logging.c utils.c prune.c fn-wrap.c inputfd.c mmap.c mem-trace.c recording-utils.h mem-trace.h utils.h inputfd.h syscall.h logging.h fn-wrap.h mmap.h)
set(extension_list "drmgr;drreg;drutil;drx;drwrap;drsyms")
foreach (ext ${extension_list})
  use_DynamoRIO_extension(${name} ${ext})
endforeach (ext)
if (NOT DynamoRIO_FOUND)
  message(FATAL_ERROR "DynamoRIO package required")
endif(NOT DynamoRIO_FOUND)
configure_DynamoRIO_client(${name})
use_DynamoRIO_extension(${name} drmgr)
